# hypervv

./: .editorconfig  .env.template  .gitignore  MANIFEST.in  README.md  default.pkrvars.hcl  dodo.py  pyproject.toml  requirements.txt
.github/scripts/: Clean-LocalCache.ps1  Restore-LocalCache.ps1  Upload-LocalCache.ps1
.github/workflows/: vagrant.yml
build_src/: common.py  ubuntu_2004.py
build_src/utils/: common.py  vagrant.py
defaults/: default.http.pkrvars.hcl  default.linux.pkrvars.hcl  default.pkrvars.hcl  default.windows.credentials.pkrvars.hcl  default.windows.pkrvars.hcl
http/centos.7/: kickstart.cfg
http/cloud-init/ubuntu.2004/: user-data
http/ubuntu.2004/: user-data
http/ubuntu.2204/: user-data
hypervv/: __main__.py  hyperv_utils.py  iso_image.py  utils.py  vagrant.py
hypervv/centos_7/: __init__.py  tasks.py
hypervv/centos_7/templates/: builds.hyperv.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
hypervv/opensuse_microos/: __init__.py  tasks.py
hypervv/opensuse_microos/templates/: builds.hyperv.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
hypervv/opensuse_microos/templates/secondary_images/ignition/: config.ign  config.yml
hypervv/scripts/: New-VmFromVhdx.ps1
hypervv/ubuntu_2004/: __init__.py  tasks.py
hypervv/ubuntu_2004/templates/: builds.hyperv.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
hypervv/ubuntu_2204/: __init__.py  tasks.py
hypervv/ubuntu_2204/templates/: builds.hyperv.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
hypervv/windows_server_2019/: __init__.py  tasks.py
hypervv/windows_server_2019/templates/: builds.hyperv.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
hypervv/windows_server_2019/templates/secondary_images/: Answerfile.Sysprep.ServerCore.xml  Answerfile.Sysprep.xml  Autounattend.ServerCore.xml  Autounattend.Standard.xml
scripts/linux/: vagrant.sh
scripts/ubuntu/: cleanup.sh  update.sh
scripts/windows/: Initialize-WinRm.ps1  PackerShutdown.cmd  SetupComplete.cmd
templates/: Vagrantfile.template  Vagrantfile.windows.template
tests/: test_iso_image.py
tests/assets/iso/nested/: nested_file1.txt
tests/assets/iso/nested/nested_nested/: nested_nested_file1.txt  nested_nested_file2.txt
tests/centos_7/: Vagrantfile
tests/opensuse_microos/: Vagrantfile
tests/scripts/: before_start_instance.ps1
tests/ubuntu.2004/: Vagrantfile
tests/ubuntu_2004/: Vagrantfile
tests/ubuntu_2204/: Vagrantfile
tests/windows_server_2019/: Vagrantfile
ubuntu.2004/: builds.hyperv.pkr.hcl  default.auto.pkrvars.hcl  sources.pkr.hcl  variables.pkr.hcl
utils/: __init__.py
